--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,360 +1,216 @@
+*{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 body{
-    background-image:url(../background.png); 
-    background-size:cover;
-    background-attachment: fixed;
+    font-family: 'Work Sans', sans-serif;
 }
-
-/*Index.html*/
-
-.my-pic{
-    display: block;
-    width: 35%;
-    float:left;
-    margin-right: 2%;
+.container{
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.intro1{
+@media(min-width:768px){
+    .container{ width: 750px;}
+}
+@media(min-width:992px){
+    .container{ width: 970px;}
+}
+@media(min-width:1200px){
+    .container{ width: 1170px;}
+}
+/*header*/
+.header{
+    padding: 10px 10px 0px 10px;
+}
+.header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+.header .container .menu .icon{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    width: 30px;
+}
+.header .container .menu .icon span{
+    width: 100%;
+    height: 2px;
+    margin-bottom: 5px;
+    background-color: rgb(12, 8, 80);
+}
+.header .container .menu .icon span:nth-child(2){
+    width: 60%;
+}
+.header .container .menu:hover .icon span:nth-child(2){
+    width: 100%;
+}
+.header .container .menu{
+    position: relative;
+}
+.header .container .menu ul{
+    list-style: none;
+    background-color: rgb(180, 71, 71, 0.5);
+    margin-top: 20px;
+    padding: 0;
+    position: absolute;
+    right: 1px;
+    min-width: 150px;
+    display: none;
+    transition: 0.3s;
+    z-index: 1;
+}
+.header .container .menu ul li a{
+    text-decoration: none;
+    transition: 0.3s;
+}
+.header .container .menu ul li{
+    padding: 5px;
+    margin:2px;
+    background-color: gainsboro;
+    text-align: right;
+}
+.header .container .menu ul li a:hover{
+    margin-right: 6px;
+    color: rgb(160, 110, 110);
+}
+.header .container .menu:hover ul{
     display: block;
-    width: 20%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 100%;
-    color: blueviolet;
-    font-weight: bold;
-    text-align: center;
 }
 .name{
-    display: block;
-    margin: 0 auto 0 auto;
-   font-family: 'The Nautigal', cursive;
-   color: brown;
+    color: #1a3a5b;
+    font-weight: bold;
 }
-.p1{
-    margin: 0 auto 0 auto;
-    font-size: small;
+/*landing*/
+.landing{
+background-image: url(../images/background1.png);
+background-size: cover;
+height: calc(100vh - 41px);
+position: relative;
+
 }
-.about-pic{
-    margin-top: 2.5%;
-    margin-left: 7.5%;
-    width: 8%;
-    border-radius: 50%;
-    background-color: cornflowerblue;
-    display: block;
+.landing .intro{
+position: absolute;
+left: 50%;
+top: 50%;
+width: 350px;
+text-align: center;
+transform: translate(-50% , -50%);
 }
-.about-pic:hover {
-    border: solid #DD380D 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1ed062, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1ed068, #3D94F6);
-    background-image: -o-linear-gradient(top, #1ed07d, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #1ed04a, #3D94F6);
-    -webkit-border-radius: 33px;
-    -moz-border-radius: 33px;
-    border-radius: 33px;
-    text-decoration: none;
- }
-.about-txt{
-    display: block;
-    font-size: 120%;
-    color: firebrick;
-    margin-top: 0%;
-    margin-left: 8%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 150px;
+.landing .intro h1{
+margin: 0;
+color: #1a3a5b;
+font-size: 55px;
 }
-.contact-pic{
-    width: 8%;
-    display: block;
-    margin-left: 10%;
-    border-radius: 50%;
-    background-color: cornflowerblue;
+.landing .intro p{
+color: #00000085;
+line-height: 1.7;
+font-size: 20px;
 }
-.contact-pic:hover {
-    border: solid #DD380D 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -o-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #1ed04a, #3D94F6);
-    -webkit-border-radius: 33px;
-    -moz-border-radius: 33px;
-    border-radius: 33px;
-    text-decoration: none;
- }
-.contact-txt{
-    display: block;
-    font-size: 120%;
-    color: firebrick;
-    margin-left: 11%;
-    margin-top: 0%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 150px;
+
+.features{
+    padding: 20px 0;
+    background-color: rgb(235 240 242);
 }
-.topics-pic{
-    width: 8%;
-    display: block;
-    margin-left: 22%;
-    margin-top: -3%;
-    border-radius: 50%;
-    background-color: cornflowerblue;
+.features .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    gap: 50px
 }
-.topics-pic:hover {
-    border: solid #DD380D 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1ed062, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1ed068, #3D94F6);
-    background-image: -o-linear-gradient(top, #1ed07d, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #1ed04a, #3D94F6);
-    -webkit-border-radius: 33px;
-    -moz-border-radius: 33px;
-    border-radius: 33px;
-    text-decoration: none;
- }
-.topics-txt{
-    display: block;
-    font-size: 120%;
-    color: firebrick;
-    margin-left: 23.5%;
-    margin-top: 0%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 150px;
+.features .feat{
+    text-align: center;
 }
-.procedures-pic{
-    width: 8%;
-    display: block;
-    margin-left: 37%;
-    margin-top: -11.5%;
-    border-radius: 50%;
-    background-color: cornflowerblue;
-}
-.procedures-pic:hover {
-    border: solid #DD380D 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1ed062, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1ed068, #3D94F6);
-    background-image: -o-linear-gradient(top, #1ed07d, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #1ed04a, #3D94F6);
-    -webkit-border-radius: 33px;
-    -moz-border-radius: 33px;
-    border-radius: 33px;
-    text-decoration: none;
- }
-.procedures-txt{
-    display: block;
-    font-size: 120%;
-    color: firebrick;
-    margin-left: 37%;
-    margin-top: 0%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 150px;
-}
-.clinical-pic{
-    width: 8%;
-    display: block;
-    margin-left: 48%;
-    margin-top: -20%;
-    border-radius: 50%;
-    background-color: cornflowerblue;
-}
-.clinical-pic:hover {
-    border: solid #DD380D 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1ed062, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1ed068, #3D94F6);
-    background-image: -o-linear-gradient(top, #1ed07d, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #1ed04a, #3D94F6);
-    -webkit-border-radius: 33px;
-    -moz-border-radius: 33px;
-    border-radius: 33px;
-    text-decoration: none;
- }
-.clinical-txt{
-    display: block;
-    font-size: 120%;
-    color: firebrick;
-    margin-left: 47%;
-    margin-top: 0%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 150px;
-}
-.radio-pic{
-    display: block;
-    width: 13%;
-    height: 15%;
-    margin-top: -22%;
-    margin-left: 52%;
-    border-radius: 50%;
-    background-color: cornflowerblue;
-}
-.radio-pic:hover {
-    border: solid #DD380D 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1ed04a, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1ed062, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1ed068, #3D94F6);
-    background-image: -o-linear-gradient(top, #1ed07d, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #1ed04a, #3D94F6);
-    -webkit-border-radius: 33px;
-    -moz-border-radius: 33px;
-    border-radius: 33px;
-    text-decoration: none;
- }
-.radio-txt{
-    font-size: 120%;
-    color: firebrick;
-    display: block;
-    margin-left: 54%;
-    margin-top: 0%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 150px;
-}
-.EM-pic{
-    width: 30%;
-    display: block;
-    margin-left: 19%;
-    margin-top: -12%;
+.features .feat .EM{
     border-radius: 100%;
+    width: 200px;
+}
+.features .feat h3{
+    font-weight: 800;
+    color: #1a3a5b;
+}
+.features .feat p{
+    color: #777;
+    line-height: 1.7;
 }
 
-/* Contact.html */
-.send-butt:hover {
-    border: solid #0ddd0d 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #d01e45, #3D94F6);
-    background-image: -moz-linear-gradient(top, #d01e45, #3D94F6);
-    background-image: -ms-linear-gradient(top, #d01e45, #3D94F6);
-    background-image: -o-linear-gradient(top, #d01e45, #3D94F6);
-    background-image: -webkit-gradient(to bottom, #d01e45, #3D94F6);
-    -webkit-border-radius: 33px;
-    -moz-border-radius: 33px;
-    border-radius: 33px;
-    text-decoration: none;
- }
- a{
+/*main-frame*/
+.special-heading{
+    font-weight: 800;
+    font-size: 50px;
+    color: #59749f69;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    letter-spacing: -3px;
+    font-variant: small-caps;
+}
+
+.special-heading + p{
+    text-align: center;
+    margin-top: -15px;
+    margin-bottom: 0;
+    padding-bottom: 10px;
+    font-size: 15px;
+    color: #777;
+}
+
+.mainframe {
+text-align: center;
+}
+
+.mainframe .img{
+width: 150px;
+border-radius: 30%;
+margin:0;
+padding: 0;
+}
+
+.mainframe .container p{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.7;
+    margin: 0;
+    padding-bottom: 35px;
+    text-align: center;
+    color: #743b3b9c;
+    overflow:auto;
+    height: 200px;
+}
+
+.edu{
+    background-color: #ebf0f2;
+    margin-top: 35px;
+    padding: 0;
+}
+.skill{
+    background-color: #ebf0f2;
+    margin-top: 35px;
+    padding: 0;
+}
+
+.contact .container p{
+    margin-bottom: 0px;
+    padding: 0;
+    height: 75px;
+}
+
+hr{
+    width:50%;
+}
+
+.mail,.phone{
     text-decoration-line: none;
- }
- a:hover{
-     color: rgb(160, 110, 110);
- }
- .phone{
-     padding: 5px;
- }
-
- /* about me */
- hr{
-     width: 10%;
-     border-style: dotted;
-     border-bottom-width: 0px;
-     border-top-width: 5px;
-     margin-top: 50px;
-     color: cadetblue;
- }
-  .about-me1{
-      width: 100px;
-      margin-top: 0px;
-      border-color: tomato;
-      border-width: 1px;
-      border-radius: 75%;
-      border-style: solid;
-      float: left;
-  }
-  .about-me1:hover{
-    border-color: rgb(0, 255, 34);
+    color: #65727e;
+    margin-left: 1%;
+    padding-bottom: 30px;
+}
+a:hover{
+    color: rgb(160, 110, 110);
+}
+.phone{
     padding: 5px;
-    border-width: 5px;
-  }
-  .intro{
-      color: black;
-      background-color: rgb(244, 246, 247);
-      width: 70%;
-      text-align: center;
-      padding-top: 1%;
-      padding-bottom: 2%;
-      padding-right: 0.5%;
-      margin-left: 4%;
-      margin-top: 4%;
-      border-style: dotted;
-      border-color: lightcoral;
-      border-radius: 10%;
-  }
-  .edu-pic{
-    width: 100px;
-    margin-right: 35%;
-    margin-top: 50px;
-    border-color: tomato;
-    border-width: 1px;
-    border-radius: 75%;
-    border-style: solid;
-    float: right;
-  }
-  .edu-pic:hover{
-    border-color: rgb(0, 255, 34);
-    padding: 5px;
-    border-width: 5px;
-  }
-  .edu-txt{
-    color: black;
-    background-color: rgb(244, 246, 247);
-    width: 50%;
-    margin: 4% 0px 0px 10%;
-    padding-left: 1%;
-    border-style: dotted;
-    border-color: lightcoral;
-    border-radius: 10%;
-    text-align: justify;
-  }
-.exp-pic{
-    width: 150px;
-    margin: 45px auto 0px auto;
-    border-color: tomato;
-    border-width: 1px;
-    border-radius: 75%;
-    border-style: solid;
-    float: left;
-}
-.exp-pic:hover{
-    border-color: rgb(0, 255, 34);
-    padding: 5px;
-    border-width: 5px;
-}
-.job-txt{
-    color: black;
-    background-color: rgb(244, 246, 247);
-    width: 50%;
-    margin: 3% 0px 0px 7%;
-    padding-left: 5%;
-    padding-right: 1%;
-    border-style: dotted;
-    border-color: lightcoral;
-    border-radius: 10%;
-    text-align: justify;
-}
-.skill-pic{
-    width: 24%;
-    margin-right: 30%;
-    margin-top: 11%;
-    border-color: tomato;
-    border-width: 1px;
-    border-radius: 75%;
-    border-style: solid;
-    float: right;
-}
-.skill-pic:hover{
-    border-color: rgb(0, 255, 34);
-    padding: 5px;
-    border-width: 5px;
-}
-.skill-txt{
-    color: black;
-    background-color: rgb(244, 246, 247);
-    width: 55%;
-    margin: 5% 0px 0px 1%;
-    padding-left:3%;
-    border-style: dotted;
-    border-color: lightcoral;
-    border-radius: 10%;
-    text-align: justify;
 }
